--- a/SeleniumNewPass/test-output/emailable-report.html
+++ b/SeleniumNewPass/test-output/emailable-report.html
@@ -31,18 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">37.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">19.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="3">dynamicWebTable.WebTableHandle</td><td><a href="#m1"><b>getAllData</b>  </a></td><td class="numi">1</td><td>1559821344706</td><td class="numi">2398</td></tr><tr class="passedodd"><td><a href="#m2"><b>getMaxPrice</b>  </a></td><td class="numi">1</td><td>1559821357461</td><td class="numi">986</td></tr><tr class="passedodd"><td><a href="#m3"><b>specificCellData</b>  </a></td><td class="numi">1</td><td>1559821366311</td><td class="numi">30</td></tr>
+<tr class="passedodd"><td rowspan="1">infosys.ColorVerify</td><td><a href="#m1"><b>verifyColor</b>  </a></td><td class="numi">1</td><td>1560500324773</td><td class="numi">80</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">dynamicWebTable.WebTableHandle:getMaxPrice</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">dynamicWebTable.WebTableHandle:getAllData</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">dynamicWebTable.WebTableHandle:specificCellData</h2>
+<h2 id="m1">infosys.ColorVerify:verifyColor</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
