--- a/SeleniumNewPass/test-output/index.html
+++ b/SeleniumNewPass/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\DJadhav\AppData\Local\Temp\testng-eclipse-49761695\testng-customsuite.xml</span>
+                    <span>C:\Users\DJadhav\AppData\Local\Temp\testng-eclipse-653752085\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,17 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dynamicWebTable.WebTableHandle" hash-for-method="getAllData">getAllData</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dynamicWebTable.WebTableHandle" hash-for-method="getMaxPrice">getMaxPrice</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dynamicWebTable.WebTableHandle" hash-for-method="specificCellData">specificCellData</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="infosys.ColorVerify" hash-for-method="verifyColor">verifyColor</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -129,28 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">dynamicWebTable.WebTableHandle</span>
+              <span class="class-name">infosys.ColorVerify</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getAllData">
-                  </a> <!-- getAllData -->
-                  <span class="method-name">getAllData</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getMaxPrice">
-                  </a> <!-- getMaxPrice -->
-                  <span class="method-name">getMaxPrice</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="specificCellData">
-                  </a> <!-- specificCellData -->
-                  <span class="method-name">specificCellData</span>
+                  <a name="verifyColor">
+                  </a> <!-- verifyColor -->
+                  <span class="method-name">verifyColor</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -158,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\DJadhav\AppData\Local\Temp\testng-eclipse-49761695\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\DJadhav\AppData\Local\Temp\testng-eclipse-653752085\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -167,7 +143,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;dynamicWebTable.WebTableHandle&quot;/&gt;
+      &lt;class name=&quot;infosys.ColorVerify&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -207,24 +183,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getAllData')
-data.setCell(0, 2, 'dynamicWebTable.WebTableHandle')
-data.setCell(0, 3, 2398);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getMaxPrice')
-data.setCell(1, 2, 'dynamicWebTable.WebTableHandle')
-data.setCell(1, 3, 986);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'specificCellData')
-data.setCell(2, 2, 'dynamicWebTable.WebTableHandle')
-data.setCell(2, 3, 30);
+data.setCell(0, 1, 'verifyColor')
+data.setCell(0, 2, 'infosys.ColorVerify')
+data.setCell(0, 3, 80);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 80 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -250,42 +218,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">dynamicWebTable.WebTableHandle</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">infosys.ColorVerify</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">startUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">getAllData</span>
-                <span class="method-start">15460 ms</span>
+                <span class="method-name">verifyColor</span>
+                <span class="method-start">18356 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">17859 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">startUp</span>
-                <span class="method-start">18551 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">getMaxPrice</span>
-                <span class="method-start">28215 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">29202 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">startUp</span>
-                <span class="method-start">29877 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">specificCellData</span>
-                <span class="method-start">37065 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">37096 ms</span>
+                <span class="method-start">18438 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
